# Cpp-Quality-Project

./: .clang-tidy  .cmake-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Readme.md  build.sh  conanfile.txt  install-arm-cross-compile.sh  install-build-deps.sh  main.cpp  requirements.txt  run.sh  test.sh  testcpp.kdev4  version.hpp.in
.devcontainer/: Dockerfile  devcontainer.json  setup_documentation_environment_on_ubuntu_22.sh  setup_environment_on_ubuntu_22.sh
.github/workflows/: ci.yaml  ubuntu_2204_build_pipeline.yml  ubuntu_2204_documentation_pipeline.yml
cmake_modules/: .format_everything.cmake.kate-swp  CMakeHelperFunctions.cmake  CMakeListsFormatting.cmake  ClangFormat.cmake  CreateLatexDocument.cmake  CreateLatexDocumentation.cmake  FindAllCppFiles.cmake  FormatEverything.cmake  GenerateGitHashAtBuildTime.cmake  GenerateGitHashAtConfigTime.cmake  format_everything.cmake  git_hash_version.cmake  myformat.cmake
cmake_modules/scripts/: format_rules_footer.in  format_rules_header.in  generate_format_rules.py  test_generate_format_rules.py
conan_profiles/: linux-x86
documentation/: CMakeLists.txt  code-documentation.doxygen  code_documentation.doxygen  code_documentation.doxygen.in  library.bib  requirements_document.tex  software-intern-development.tex
probelibrary/: CMakeLists.txt
probelibrary/benchmark/: CMakeLists.txt  probe_benchmark.cpp
probelibrary/include/: probe.h
probelibrary/src/: probe.cpp
probelibrary/tests/: CMakeLists.txt  probe_benchmark.cpp  unit_test.cpp
project/: .cmake-format  .gitignore  CMakeLists.txt  build.sh
project/cmake_modules/: CMakeHelperFunctions.cmake  CMakeListsFormatting.cmake  CreateLatexDocumentation.cmake  FormatEverything.cmake  GenerateGitHashAtBuildTime.cmake
project/cmake_modules/scripts/: generate_format_rules.py  test_generate_format_rules.py
project/cmake_modules/scripts/generate_format_rules_tests/resources/: build.make
project/documentation/: CMakeLists.txt  README.md
project/probelibrary/benchmark/: CMakeLists.txt
project/probelibrary/include/: probe.h
project/probelibrary/tests/: CMakeLists.txt
project/test/: CMakeLists.txt
scripts/: configure.sh  document.sh  install-doc-dep.sh  setup_development_environment.sh
test/: CMakeLists.txt  test_gtest_based.cpp  test_main.cpp  test_script.sh
toolchains/: toolchain-raspberry.cmake
workflow_test/: CMakeLists.txt  builds_in_correct_folder.sh  default_project_is_compiling.sh  documentation_compile_locally.sh  git_hash_fresh_configure.sh  no_formatting_of_cmake_file_inside_build_directory_when_using_build_script.sh  no_formatting_of_cmake_file_inside_build_directory_when_using_cmake_directly.sh  no_formatting_of_source_file_inside_build_directory_when_using_build_script.sh  no_formatting_of_source_file_inside_build_directory_when_using_cmake_directly.sh
